<resources>
    <string name="app_name">admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idSewa">Tr - 091220</string>
    <string name="total">100.000</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="detail_sewa">Detail Sewa</string>
    <string name="email">Masukkan Email Admin</string>
    <string name="password">Masukkan Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="agenda">Agenda</string>
    <string name="alat">Alat</string>
    <string name="tambah_alat">Tambah Alat</string>
    <string name="nama_alat">Nama Alat</string>
    <string name="stok">Stok</string>
    <string name="harga">Harga</string>
    <string name="desktipsi">Desktipsi</string>
    <string name="Orderan">Orderan</string>
</resources>