<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggradient">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/imageLogo"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/login"
        android:background="@drawable/shape_corner_white"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/login"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>