<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorprimary">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/appbar"
            app:layout_constraintTop_toTopOf="@id/appbar"
            app:layout_constraintStart_toStartOf="@id/appbar"
            android:id="@+id/back"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            app:layout_constraintBottom_toBottomOf="@id/appbar"
            app:layout_constraintTop_toTopOf="@id/appbar"
            app:layout_constraintStart_toEndOf="@id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/tambah_alat"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        android:layout_marginTop="50dp">
        <ImageView
            android:id="@+id/inFoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@id/body"
            app:layout_constraintTop_toTopOf="@id/body"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_image_24"/>
        <EditText
            android:inputType="text"
            android:id="@+id/inAlat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/inFoto"
            android:hint="@string/nama_alat"
            android:textColorHint="@color/white"/>
        <EditText
            android:inputType="number"
            android:id="@+id/inStok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/inAlat"
            android:hint="@string/stok"
            android:textColorHint="@color/white"/>
        <EditText
            android:inputType="number"
            android:id="@+id/inHarga"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/inStok"
            android:hint="@string/harga"
            android:textColorHint="@color/white"/>

        <EditText
            android:inputType="text"
            android:id="@+id/inDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/inHarga"
            android:hint="@string/desktipsi"
            android:textColorHint="@color/white"/>
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/inDeskripsi"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:backgroundTint="#B38C17"
            android:text="Save"/>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>